# markdowneditor

./: CMakeLists.txt  Info.plist  README.md  main.cpp
ui/: codeeditor.cpp  codeeditor.h  notepad.cpp  notepad.h
